Closed Bug 618717 Opened 14 years ago Closed 14 years ago

IndexedDB: Fix error codes to match spec changes

Categories

(Core :: Storage: IndexedDB, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

Details

Attachments

(1 file)

The spec has changed its error codes a bit, we need to update our code.
This is one of the remaining bugs to finalize our IndexedDB story for Firefox 4. Blocking.
blocking2.0: ? → beta9+
Attachment #497431 - Flags: review?(jonas)
Attachment #497431 - Flags: review+
Attachment #497431 - Flags: approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
As per today's meeting, beta 9 will be a time-based release. Marking these all betaN+. Please move it back to beta9+ if you believe it MUST be in the next beta (ie: trunk is in an unshippable state without this)
blocking2.0: beta9+ → betaN+
Component: DOM → DOM: IndexedDB
Version: Trunk → unspecified
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: