Bug 618717 - 'IndexedDB: Fix error codes to match spec changes'. r=sicking, a=blocking.